--- a/main.css
+++ b/main.css
@@ -1,59 +1,64 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, button, input, textarea {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+body {
+    background-color: #718093;
+    color: #fff;
+}
+
+.container{
+    max-width: 1054px;
+}
+
 header{
     background-color: #273c75;
-    color: #fff;
     position: sticky;
     top: 0;
     left: 0;
     z-index: 10;
     padding: 8px;
-    font-family: "Bebas Neue", sans-serif;
-}
-
-.bebas-neue-regular {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}  
-
-.container{
-    max-width: 1200px;
 }
 
 .nav-link{
     color: #fff;
 }
 
+.nav-link:hover{
+    color: #ffff;
+}
+
 section{
-    height: 135vh;
-    background-color: #fff;
-    padding-top: 90px;
-    background-color: #718093;
+    padding: 5rem 0;
+    
 }
 
 
 section h2{
     text-align: center;
-    font-size: 46px;
+    font-size: 3rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #fff;
-    margin-bottom: 36px;
+}
+
+.product {
+    margin-top: 2rem;
 }
 
 .card{
-    max-width: 70%;
-}
-
-.col-4{
-    padding: 36px 46px;
+    max-width: 100%;
 }
 
 .card img{
-    max-width: 70%;
-    margin: auto;
-}
-
-.card-body{
-    display: block;
+    max-width: 50%;
+    margin: 0 auto;
 }
 
 .card-body h4{
@@ -61,31 +66,17 @@ section h2{
     padding: 12px;
 }
 
-.card-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .card-footer button{
     width: 100%;
 } 
 
-#lacrados img{
-    margin-top: 16px;
-    max-width: 50%;
-    
-}
+
 
 footer{
     background-color: #273c75;
-    color: #fff;
     padding: 24px;
-    font-size: 24px;
+    font-size: 1.5rem;
     text-align: center;
-    font-family: "Bebas Neue", sans-serif;
-    margin-top: 4px;
-    
 }
 
 
